data/derived/fa15/progs/unify/prog3652.ml.out
Characters 27-28:
  let _ = padZero [1;0;0;2] [9;9];;
                             ^
Error: This expression has type int but an expression was expected of type
         int list
